2005-09-25  Michael Natterer  <mitch@gimp.org>

	* app/actions/view-actions.c (view_zoom_actions): use
	GIMP_STOCK_CHAR_PICKER for the actions which are only there for
	keyboard shortcuts. Not perfect but better than before.

2005-09-25  Michael Natterer  <mitch@gimp.org>

	* app/actions/file-actions.c (file_actions): made Shift+Ctrl+W the
	shortcut for "Close all".

2005-09-25  Michael Natterer  <mitch@gimp.org>

	* plug-ins/common/psd.c: massively indented and de-uglyfied,
	(not many lines unmodified). Still not the incarnation of
	beautiful code, but more readable for an eye used to Gimp code.
	No logic changes, just formatting.

2005-09-25  Michael Natterer  <mitch@gimp.org>

	* plug-ins/common/compose.c (run): set "is_ID" to TRUE, not FALSE
	when decoding the "compose-data" parasite. Fixes Recompose.
	Return error, not success if recomposing fails. Misc cleanups.

2005-09-25  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpwidgets.def
	* libgimpwidgets/gimpzoommodel.[ch]: added gimp_zoom_model_zoom()
	and changed gimp_zoom_model_get_fraction() to take a model instead
	of the zoom factor.

	* app/display/gimpdisplayshell.[ch]: use a GimpZoomModel for the
	display scale factor.

	* app/actions/image-commands.c
	* app/actions/view-actions.c
	* app/actions/view-commands.c
	* app/display/gimpdisplayshell-callbacks.c
	* app/display/gimpdisplayshell-scale.c
	* app/display/gimpdisplayshell-title.c
	* app/display/gimpnavigationeditor.c
	* app/display/gimpstatusbar.c
	* app/tools/gimpeditselectiontool.c
	* app/tools/gimpmagnifytool.c: changed accordingly.

2005-09-25  Karine Delvare  <kdelvare@nerim.net>

	* app/tools/gimpcroptool.c: fixed assignment of local variable
	"rectangle_exists".

2005-09-25  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpnewrectselecttool.c: fixed assignment of local
	variable "rectangle_exists".

2005-09-25  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpdisplayshell-callbacks.c