@@ -1,5 +1,11 @@
 2005-09-25  Michael Natterer  <mitch@gimp.org>
 
+	* app/dialogs/convert-dialog.c
+	* app/dialogs/palette-import-dialog.c: added icons to the
+	affirmative action buttons.
+
+2005-09-25  Michael Natterer  <mitch@gimp.org>
+
 	* app/actions/view-actions.c (view_zoom_actions): use
 	GIMP_STOCK_CHAR_PICKER for the actions which are only there for
 	keyboard shortcuts. Not perfect but better than before.
